# machine-learning-pipelines

./: .gitignore  LICENSE  README.md  pyproject.toml
mlplines/: __init__.py  _component_handler.py  _pipeline.py  _special_entities.py  check_factory.py  hyper_factory.py  implement_factory.py  saveload_factory.py
mlplines/_builtins/: __init__.py  gensim_extensions.py  topic_modelling_pipelines_extensions.py
mlplines/abc/: __init__.py  _abc.py
test-utils/: pyproject.toml
test-utils/tutils/: __init__.py  _constants.py  _dir_utils.py  _tutils.py  tutils.py
tests/: 0_import_test.py  1_save_component_test.py  2_load_component_test.py  import_test.py  petitions_sample.pkl  petitions_sample.pqt  save_load_test.py  tutils.py
